2009-11-19  Stefan Monnier  <monnier@iro.umontreal.ca>

	* simple.el (with-wrapper-hook): Fix thinko.

	* hfy-cmap.el (hfy-rgb-file): Use locate-file.
	(htmlfontify-load-rgb-file): Remove unnused var `ff'.
	Use with-current-buffer and string-to-number.
	(hfy-fallback-colour-values): Use assoc-string.
	* htmlfontify.el (hfy-face-to-css): Remove unused var `style'.
	(hfy-face-at): Remove unused var `found-face'.
	(hfy-compile-stylesheet): Remove unused var `css'.
	(hfy-fontify-buffer): Remove unused vars `in-style', `invis-button',
	and `orig-buffer'.
	(hfy-buffer, hfy-copy-and-fontify-file, hfy-parse-tags-buffer):
	Use with-current-buffer.
	(hfy-text-p): Use expand-file-name and fewer setq.

2009-11-19  Vivek Dasmohapatra  <vivek@etla.org>

	* htmlfontify.el, hfy-cmap.el: New files.

2009-11-19  Juri Linkov  <juri@jurta.org>

	* minibuffer.el (completions-format): New defcustom.
	(completion--insert-strings): Implement vertical format.

	* simple.el (switch-to-completions): Move point to the first
	completion when point was at the beginning of the buffer.

2009-11-19  Juri Linkov  <juri@jurta.org>

	* find-dired.el (find-name-arg): Remove autoload.  (Bug#4387)

	* progmodes/grep.el (rgrep): Require `find-dired' for `find-name-arg'.

2009-11-19  Chong Yidong  <cyd@stupidchicken.com>

	* mail/sendmail.el (mail-yank-prefix): Change default to "> ".
	(mail-signature): Change default to t.
	(mail-from-style): Deprecate `system-default' value.
	(mail-insert-from-field): For default value of mail-from-style,
	default to `angles' unless `angles' needs quoting and `parens'
	does not.
	(mail-citation-prefix-regexp): Use citation regexp from
	message-mode.

2009-11-19  Michael Albinus  <michael.albinus@gmx.de>

	* net/tramp.el (tramp-do-copy-or-rename-file-out-of-band):
	Set variables for computing the prompt for reading password.

2009-11-19  Glenn Morris  <rgm@gnu.org>

	* dired-aux.el (dired-compress-file-suffixes): Add ".xz".  (Bug#4953)
